tests/extensions/mime/errors/limits.sieve
require "foreverypart";

foreverypart :name "frop" {
	foreverypart :name "friep" {
		foreverypart :name "frml" {
			foreverypart {
				foreverypart {
					break;
				}
			}
		}
	}
}
